add patch update anuncio
